<resources>
    <string name="app_name">The Smuggler\'s Cove</string>
    <string name="empty_view_title_text">Your treasure chest is empty</string>
    <string name="empty_view_image_description">Empty treasure chest</string>
    <string name="empty_view_subtitle_text">Click the + button below to add some booty.</string>
    <string name="label_item">Item</string>
    <string name="label_name">Name</string>
    <string name="label_description">Description</string>
    <string name="label_price">Price</string>
    <string name="label_quantity">Quantity</string>
    <string name="decrease_quantity_button_description">Decrease quantity button</string>
    <string name="increase_quantity_button_description">Increase quantity button</string>
    <string name="label_supplier_section">Supplier</string>
    <string name="label_supplier_name">Supplier Name</string>
    <string name="label_supplier_email">Supplier Email</string>
    <string name="label_photo">Photo</string>
    <string name="photo_image_description">Tap to add photo</string>
    <string name="label_sell_button">Sell</string>
    <string name="menu_save">Save</string>
    <string name="menu_order">Order More</string>
    <string name="menu_remove_image">Remove Image</string>
    <string name="menu_delete">Delete</string>
    <string name="item_label_quantity">Quantity: %1$s</string>
    <string name="item_label_price">Price per unit: $%1$s</string>
    <string name="edit_title_for_insert">Add item</string>
    <string name="edit_title_for_update">Edit item</string>
    <string name="delete_item_prompt">Are you sure that you want to delete this item?</string>
    <string name="delete_item_prompt_yes">Delete it</string>
    <string name="delete_item_prompt_no">Keep it</string>
    <string name="abandon_changes_prompt">You have unsaved changes.</string>
    <string name="abandon_changes_prompt_yes">Discard</string>
    <string name="abandon_changes_prompt_no">Keep editing</string>
    <string name="insert_item_fail">Failed to add item.</string>
    <string name="insert_item_success">Item added to your stash.</string>
    <string name="update_item_fail">Failed to update your item.</string>
    <string name="update_item_success">Your item was updated.</string>
    <string name="delete_item_fail">Failed to delete your item.</string>
    <string name="delete_item_success">Your item was deleted.</string>
    <string name="order_subject">A New Order</string>
    <string name="order_body">"Dear %1$s,\n\nI would like to order more of the following:\n\n* %2$s\n\nThank you!\n\nThe Smuggler's Cove"</string>
    <string name="sell_fail">Sale of item failed.</string>
    <string name="sell_success">Item sold. Quantity reduced by 1.</string>
    <string name="validation_error">You have validation errors:</string>
    <string name="validation_empty_name">\n- You must enter an item Name.</string>
    <string name="validation_empty_supplier_name">\n- You must enter a Supplier Name.</string>
    <string name="validation_empty_supplier_email">\n- You must enter a Supplier Email Address.</string>
</resources>
