<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parchment"
    tools:context=".InventoryActivity">

    <ListView
        android:id="@+id/inventory_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_inventory_image"
            style="@style/EmptyViewStyle"
            android:contentDescription="@string/empty_view_image_description"/>

        <TextView
            android:id="@+id/empty_title_text"
            style="@style/EmptyViewTitleStyle"
            android:layout_below="@+id/empty_inventory_image"
            android:fontFamily="sans-serif-medium"
            android:text="@string/empty_view_title_text"/>

        <TextView
            android:id="@+id/empty_subtitle_text"
            style="@style/EmptyViewSubTitleStyle"
            android:layout_below="@+id/empty_title_text"
            android:text="@string/empty_view_subtitle_text"/>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        style="@style/FABStyle"/>

</RelativeLayout>

